# audioRecord

./: CMakeLists.txt
src/: main.cpp  utility.cpp
